# mcp-training

./: .dockerignore  .gitignore  Dockerfile  README.md  deployment_devops.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-dev.yml  deploy.yml
scripts/: deploy.sh  index_documents.py
src/: __init__.py  server.py
src/document/: __init__.py  chunker.py  pdf_loader.py
src/rag/: __init__.py  embeddings.py  gemini_client.py  pinecone_client.py  retriever.py
src/tools/: __init__.py  lpdp_tools.py
tests/: test_document.py  test_rag.py  test_server.py
